creating a game start button and adding uis

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <button id="btnStart">Start Game</button>
     <button id="btnRck">Rock</button>
     <button id="btnPpr">Paper</button>
     <button id="btnSci">Scissors</button>
-    
+
+    <div class="results"> </div>
 </body>
 <script src="script.js"></script>
 </html>
