--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    
     <button id="btnStart">Start Game</button>
-    <button id="btnRck">Rock</button>
-    <button id="btnPpr">Paper</button>
-    <button id="btnSci">Scissors</button>
+    <button id="btnRck" > <img src="images/rock.jpg" alt="rock"> </button>
+    <button id="btnPpr"> <img src="images/paper.jpg" alt="paper"> </button>
+    <button id="btnSci"> <img src="images/scissor.jpg" alt="scissors"> </button>
 
     <div class="results"> </div>
 </body>
