--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    
-    <button id="btnStart">Start Game</button>
-    <button id="btnRck" > <img src="images/rock.jpg" alt="rock"> </button>
-    <button id="btnPpr"> <img src="images/paper.jpg" alt="paper"> </button>
-    <button id="btnSci"> <img src="images/scissor.jpg" alt="scissors"> </button>
+    <div class="container">
+    <!--<button id="btnStart">Start Game</button>-->
+    <div class="button">
+        <button id="btnRck" > <img src="images/rock.jpg" alt="rock"> </button>
+        <button id="btnPpr"> <img src="images/paper.jpg" alt="paper"> </button>
+        <button id="btnSci"> <img src="images/scissor.jpg" alt="scissors"> </button>
+    </div>
 
     <div class="results"> </div>
+    </div>
 </body>
 <script src="script.js"></script>
 </html>
