added rps h1 and css aspect ratio of images

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+
+    <h1>Rock Paper Scissors!</h1>
     <div class="container">
     <!--<button id="btnStart">Start Game</button>-->
     <div class="button">
@@ -17,7 +19,7 @@
         <button id="btnSci"> <img src="images/scissor.jpg" alt="scissors"> </button>
     </div>
 
-    <div class="results"> </div>
+        <div class="results"> </div>
     </div>
 </body>
 <script src="script.js"></script>
