added try again button to be hidden and remove results once try again button is clicked

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <button id="btnPpr"> <img src="images/paper.jpg" alt="paper"> </button>
         <button id="btnSci"> <img src="images/scissor.jpg" alt="scissors"> </button>
     </div>
-
         <div class="results"> </div>
+        <button id="btnTry"> Try Again </button>
     </div>
 </body>
 <script src="script.js"></script>
