change best of 5 rounds to first to five wins

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <h1>Rock Paper Scissors!</h1>
     <div class="container">
-    <!--<button id="btnStart">Start Game</button>-->
+    <h2>Score first to five!</h2>
     <div class="button">
         <button id="btnRck" > <img src="images/rock.jpg" alt="rock"> </button>
         <button id="btnPpr"> <img src="images/paper.jpg" alt="paper"> </button>
